force-app/main/default/objects/Expense__c/fields/Budget_Month__c.field-meta.xml
<CustomField>
    <fullName>Budget_Month__c</fullName>
    <formula>TEXT(YEAR(Transaction_Date__c)) &amp; &quot;-&quot; &amp; LPAD(TEXT(MONTH(Transaction_Date__c)), 2, &quot;0&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Month</label>
    <type>Text</type>
</CustomField>