force-app/main/default/objects/Expense__c/validationRules/Category_Is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Category_Is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Category__c)</errorConditionFormula>
    <errorDisplayField>Category__c</errorDisplayField>
    <errorMessage>Category is required. Please select a category for this transaction.</errorMessage>
</ValidationRule>