force-app/main/default/objects/Expense__c/validationRules/Expense_Cannot_Use_Income_Category.validationRule-meta.xml
<ValidationRule>
    <fullName>Expense_Cannot_Use_Income_Category</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Transaction_Type__c, &quot;Expense&quot;), NOT(ISBLANK(Category__c)), ISPICKVAL(Category__r.Category_Type__c, &quot;Income&quot;))</errorConditionFormula>
    <errorDisplayField>Category__c</errorDisplayField>
    <errorMessage>An Expense transaction cannot be linked to an Income category. Please select an Expense category.</errorMessage>
</ValidationRule>