force-app/main/default/objects/Expense__c/validationRules/Financial_Account_Must_Be_Active.validationRule-meta.xml
<ValidationRule>
    <fullName>Financial_Account_Must_Be_Active</fullName>
    <active>true</active>
    <description>Backstop for API/automation paths: prevents linking an expense to an inactive financial account. The lookup filter enforces this in the standard UI.</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Financial_Account__c)),
  OR(ISNEW(), ISCHANGED(Financial_Account__c)),
  TEXT(Financial_Account__r.Status__c) = &apos;Inactive&apos;
)</errorConditionFormula>
    <errorDisplayField>Financial_Account__c</errorDisplayField>
    <errorMessage>You can only link an expense to an Active financial account.</errorMessage>
</ValidationRule>