force-app/main/default/objects/Expense__c/validationRules/Transaction_Date_Cannot_Be_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Transaction_Date_Cannot_Be_Future</fullName>
    <active>true</active>
    <errorConditionFormula>Transaction_Date__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Transaction_Date__c</errorDisplayField>
    <errorMessage>Transaction Date cannot be in the future.</errorMessage>
</ValidationRule>