force-app/main/default/objects/Expense__c/listViews/All_Expenses.listView-meta.xml
<ListView>
    <fullName>All_Expenses</fullName>
    <columns>OBJECT_ID</columns>
    <columns>Transaction_Date__c</columns>
    <columns>Amount__c</columns>
    <columns>Transaction_Type__c</columns>
    <columns>Category__c</columns>
    <columns>Payment_Method__c</columns>
    <columns>Merchant__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Expenses</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>